[package]
name = "tiny-xlib"
version = "0.1.0"
edition = "2018"

[features]
linked = []
linked_static = ["linked"]

[dependencies]
as-raw-xcb-connection = "1.0.0"
ctor = "0.2.0"
libloading = "0.8.0"

[dev-dependencies]
x11-dl = "2.21.0"
x11rb = { version = "0.11.1", features = ["allow-unsafe-code"] }
